# generative-ai-workshop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  env.sh  env.yml  install.sh  pyproject.toml  requirements.in  requirements.txt  slides.md  windows-env.yml
code/: generative-ai.ipynb  install.sh  reading_text.py  small_stable_diffusion.py
pictures/: diffusion-3.png~
slides/: slides.md
