[project]
name = "generative-ai-workshop"
version = "0.1.0"
description = "The world's best generative AI workshop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.1",
    "diffusers>=0.35.2",
    "ftfy>=6.3.1",
    "gpt4all>=2.8.2",
    "gradio>=3.36.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "tensorboard>=2.20.0",
    "transformers>=4.57.1",
    "whisper>=1.1.10",
]
[dependency-groups]
dev = [
    "pre-commit",
]
