[project]
name = "generative-ai-workshop"
version = "0.1.0"
description = "The world's best generative AI workshop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.1",
    "diffusers>=0.35.2",
    "en-core-web-sm",
    "ftfy>=6.3.1",
    "gpt4all>=2.8.2",
    "gradio>=3.36.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "kokoro>=0.9.4",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "py-dreambooth>=0.2.5",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "transformers>=4.57.1",
]
[dependency-groups]
dev = [
    "pre-commit",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
